# Clipped-SGD-UCB

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  experiment_drawer.ipynb  pyproject.toml  setup.py  test.ipynb
experiment_helpers/: delta_tail_draw.py  drawer.py  utils.py
experiment_helpers/experiment_setups/: 1_light_tail.py  4_all_.py  delta_heavy_tail.py  delta_light_tail.py  delta_tail_draw.py  regret_experiment.py  runtime_comparison.py
sgdbandit/: __init__.py
sgdbandit/agents/: SupBMM_bandit.py  __init__.py  abstract_agent.py  adaptive_inf.py  agent_init_funcs.py  ape.py  arm_agent.py  heavy_inf.py  ucb_agents.py
sgdbandit/environments/: __init__.py  envs.py
sgdbandit/utils/: algorithm_function.py  algorithms.py  arms.py  mean_estimators.py
