[tool.poetry]
name = "SGDBandit"
version = "0.1.0"
description = "Code for algorithm SGDBandit to deal with MAB with heavy tails"
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
pre-commit = "^2.16.0"
tqdm = "^4.66.1"
joblib = "^1.3.2"
dill = "^0.3.8"

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.flake8]
max-line-length = 120


[tool.isort]
atomic = true
profile = "black"
line_length = 130
skip_gitignore = true

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"
flake8 = "pyproject.toml"

[tool.nbqa.addopts]
flake8 = ["--extend-ignore=E402"]

[tool.nbqa.mutate]
black = 1
isort = 1


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
